--- a/python/jean-pyarre/templates/base.html
+++ b/python/jean-pyarre/templates/base.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
-  <title>{% block title %}Algorithm versions{% endblock %}</title>
+  <title>{% block title %}Available algorithm versions{% endblock %}</title>
 </head>
 <body>
 <header>
-  <a href="/" class="back">↰ Back to Drupal</a>
+  <a href="/" class="back">↰ Go to Drupal</a>
 </header>
 <main>
   {% block content %}{% endblock %}
